package domain;

public class Ubicacion {

    private Double latitud;
    private Double longitud;

}
